# cli

./: .bumpversion.cfg  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
cli/: __init__.py  env.py  errorhandler.py  input_interface.py  install.py  output_interface.py  progress.py  run.py  status.py
src/cli/: __init__.py  input.py
src/cli/cli/: entry_point.py
src/cli/commands/: __init__.py  commands.py  install.py  open_.py  run.py  runner.py
src/cli/context/: context.py
src/cli/main/: main.py
src/cli/models/: __init__.py  models.py
src/cli/new/: input_interface.py  install.py  output_interface.py  progress.py  run.py  status.py
src/cli/output/: __init__.py  console.py  message.py  progress.py  rich.py  status.py
test/: capturetest.py  progresstest.py
tests/: clispinner.py  test_api.py  test_cli_entry_point.py  test_input.py  test_main.py  test_message.py  test_output.py  test_progress.py  test_progress_ui.py  test_run.py  test_runner.py
