[project]
name = "quinten-cli"
version = "1.1.10"
description = ""
authors = [{name = "Quinten Roets", email = "qdr2104@columbia.edu"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "rich",
    "sh",
    "superpathlib",
]

[project.urls]
"Source Code" = "https://github.com/quintenroets/cli"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "twine"
]
test = [
    "pytest"
]

[project.scripts]
konsolerun = "cli.run:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
]
fix = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
