[metadata]
name = quinten-cli
version = 1.0.4
author = Quinten Roets
author_email = quinten.roets@gmail.com
description = subprocess with extended functionality
url = https://github.com/quintenroets/cli
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
package_dir =
    = .
install_requires =
    python-dotenv
    rich
    sh
    superpathlib

[options.entry_points]
console_scripts =
    konsolerun = cli.run:main

[options.packages.find]
where = .

[bdist_wheel]
universal = true
